# book-translator

./: .gitignore  AGENTS.md  ANALISE.md  CHANGELOG.md  CLAUDE.md  FEATURES.md  PLAN.md  QWEN.md  README.md  RESULT.md  chapter_splitter.py  cli.py  config.json  config.py  convert_to_docx.py  db.py  default_prompts.py  fix_orchestrator.py  glossary_manager.py  local-llm-research.md  logger.py  main.py  migrate_glossary.py  orchestrator.py  patch_orchestrator.py  path_resolver.py  proofreader.py  pyproject.toml  rate_limiter.py  requirements.txt  task_manager.py  term_collector.py
.claude/: settings.local.json
_deprecated_docs/: API-Documentation.md  Codebase-Reference.md  Error-Handling-and-Retry.md  Overview.md  README.md  _Sidebar.md  style_guide_prompt_template.md
commands/: glossary_cmd.py  init_cmd.py  status_cmd.py  translate_cmd.py
data/: _style_guide.md
data/style_guides/: default.md  en_ru.md  ko_ru.md
docs/: Architecture-Deep-Dive.md  Concurrency-Model.md  Database.md  Home.md  Pipeline-Stages.md  README.md  Tests-Documentation.md  User-Guide.md
prompts/: README.md  global_proofreading.txt  proofreading.txt  term_discovery.txt  translation.txt
tests/: test_chapter_splitter.py  test_cli.py  test_db.py  test_default_prompts.py  test_discovery.py  test_glossary_manager.py  test_init_cmd.py  test_integration.py  test_llm_runner.py  test_orchestrator.py  test_path_resolver.py  test_proofreader.py  test_rate_limiter.py  test_stage_options.py  test_task_manager.py  test_term_collector.py  test_translate_cmd.py  test_ui_bridge.py  test_utils.py
(+53 files in other folders)
