[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "book-translator"
version = "3.0.0"
description = "CLI для перевода ранобэ с использованием gemini-cli"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
    "tenacity>=8.0.0",
    "json-repair>=0.25.0",
    "tomli>=2.0.0"
]

[project.scripts]
book-translator = "cli:main"
