[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "book-translator"
version = "3.0.0"
description = "CLI для перевода ранобэ с использованием gemini-cli"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
    "tenacity>=8.0.0",
    "json-repair>=0.25.0",
    "python-docx>=1.1.0",
    "ebooklib>=0.18",
    "textual>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
book-translator = "book_translator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
book_translator = ["data/style_guides/*.md", "data/prompts/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
